--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CryptoMessenger</string>
+    <string name="channels_string">Диалог</string>
+    <string name="profile_string">Профиль</string>
+    <string name="login_top_text">Enter</string>
+    <string name="hint_login_username">Username</string>
+    <string name="hint_login_password">Password</string>
+    <string name="btn_string">LogIn</string>
 </resources>
