--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="write_hint">Write...</string>
     <string name="error_message">An error occurred while loading data. Check the connection …</string>
     <string name="repeat">Repeat</string>
+    <string name="new_message">You have new message</string>
 </resources>
